# http-poems

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.local.yml  env.ci  env.dev  env.prod  manage.py  setup.cfg
.github/workflows/: bandit.yml
apps/: __init__.py
apps/poems/: admin.py  apps.py  client_urls.py  client_views.py  managers.py  models.py  querysets.py  serializers.py  urls.py  utils.py  views.py
apps/poems/fixtures/: poems.json
apps/poems/migrations/: 0001_initial.py
apps/poems/static/css/: homepage.css
apps/poets/: admin.py  apps.py  client_urls.py  client_views.py  models.py  serializers.py  urls.py  views.py
apps/poets/fixtures/: poets.json
apps/poets/migrations/: 0001_initial.py
apps/status_codes/: admin.py  apps.py  choices.py  client_urls.py  client_views.py  models.py  serializers.py  urls.py  views.py
apps/status_codes/fixtures/: status_codes.json
apps/status_codes/migrations/: 0001_initial.py
apps/status_codes/views/: client.py
apps/suggestions/: choices.py  models.py
apps/suggestions/migrations/: 0001_initial.py
apps/utils/: choices.py  functions.py
apps/utils/static/css/: global.style.css  (+2 more)
http_poems/: asgi.py  settings.py  urls.py  wsgi.py
http_poems/settings/: __init__.py  default.py
http_poems/settings/phases/: development.py  production.py
poems/: admin.py  apps.py  exceptions.py  managers.py  models.py  querysets.py  serializers.py  utils.py  views.py
poems/fixtures/: status_codes.json
poems/migrations/: 0001_initial.py
requirements/: base.in  base.txt  dev.in  dev.txt
(+13 files in other folders)
