[metadata]
name = http_poems
version = 0.1.0
description = Home of poems for each http status code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://http-poems.ir
author = Mohammad Javad Nikbakht
author_email = javadnikbakht@mail.com
license = GPL-3.0
license_file = LICENSE
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[tool:brunette]
line-length = 79
verbose = true
single-quotes = false
exclude = migrations,venv

[flake8]
max-line-length = 79
max-complexity = 10
show-source = False
exclude = migrations,venv,build,dist,.svn,CVS,.bzr,.hg,.git,__pycache__
extend_ignore = E203, W503
per-file-ignores = http_poems/settings/phases/*:F405, http_poems/settings/default.py:E501
